2015-07-08  Simon Cozens  <simon@simon-cozens.org>

	* pngimage.c: Fixed a typo "XObjcect" => "XObject".

2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.
	* ac/dvipdfm-x.ac: Fixed a typo.
	* xdvipdfmx.test: Fixed a typo.

2015-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dpxcrypt.c: Bugfix: Replace byte => uint8_t.
	* dpxcrypt.[ch]: Replace u{8,32,64} => uint{8,32,64}_t.
	* pdfencrypt.c: Declare pdf_enc_init() as static.
	drop useless cast (const char *) => (char *).
	* unicode.h: Drop unnecessary #include <inttypes.h>.

2015-07-04  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* jpegimage.c: Use size_t, uint32_t,... instead of short/long int.
	* dpxcrypt.c/h, dvi.c/h, pdfencrypt.c/h, dvipdfmx.c, pdfobj.c:
	Add AES encryption support in PDF ecryption.
	* pngimage.c : Support images with 16 bit depth.
	* unicode.c/h: Add UTF-8 decoding function.

2015-05-23  Jiang Jiang  <gzjjgod@gmail.com>

	* dvi.c: Fix Type1 font encoding and metrics.

2015-05-21  Karl Berry  <karl@tug.org>

	* version 20150515 for TL'15.

2015-05-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvi.c: Do not identify Type1 fonts as TrueType or OpenType.

2015-05-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* cidtype0.c: Avoid compiler warnings:
	(CIDFont_type0_get_used_chars, CIDType0Error_Show,
	CIDFontInfo_init, CIDFontInfo_close, -CIDType0Error,
	CIDFont_type0_add_CIDSet): Declare as static.
	(CIDFont_type0_add_CIDSet): Initialize num_glyphs, last_cid.
	(CIDFont_type0_open): Always initialize sfont, drop unused.

2015-05-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* cidtype0.c: Support old compilers.

2015-05-01  Jiang Jiang  <gzjjgod@gmail.com>

	* cidtype0.c, cidtype0.h, cid.c: Combine all Type 0 open functions
	into one. Simplify some implementations.

2015-04-27  Jiang Jiang  <gzjjgod@gmail.com>

	* cidtype0.c: Fix TTC support for Type 1 Composite and Type 0 fonts.

2015-04-27  Jiang Jiang  <gzjjgod@gmail.com>
